@@ -30,7 +30,7 @@ whatever)
 from Globals import InitializeClass
 from AccessControl import ClassSecurityInfo
 
-from Products.CMFCore.CMFCorePermissions import View
+from Products.CMFCore.permissions import View
 
 from DirectoryVocabulary import DirectoryVocabulary
 
