@@ -30,7 +30,7 @@ from AccessControl.PermissionRole import PermissionRole
 from OFS.Folder import Folder
 
 from Products.CMFCore.utils import UniqueObject
-from Products.CMFCore.CMFCorePermissions import ManagePortal
+from Products.CMFCore.permissions import ManagePortal
 
 from Products.CPSDirectory.BaseDirectory import BaseDirectory
 
