@@ -26,7 +26,7 @@ from Acquisition import aq_base
 from AccessControl import ClassSecurityInfo
 from AccessControl import getSecurityManager
 
-from Products.CMFCore.CMFCorePermissions import ManagePortal
+from Products.CMFCore.permissions import ManagePortal
 from Products.CMFCore.utils import getToolByName
 from Products.CMFCore.utils import SimpleItemWithProperties
 
